--- a/src/index.html
+++ b/src/index.html
@@ -30,35 +30,15 @@
 <button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button>
 <button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button>
 <button id="newTest" type="button" class="btn btn-primary">Предложить тест</button><br><br>
-<h6 class="text-primary">Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6><br><br><br><br>
-<h3 class="text-primary">Feedback'шная:</h3>
-<div class="card" style="width: 18rem;">
-    <img src="jpeg/Larisa1Yellow.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <p class="card-text">Лариса Семеновна:<br>После прохождения теста на этом ресурсе я поняла в каком направлении надо дальше изучать программирование! Теперь я работаю в Гугл!</p>
-    </div>
-</div>
-<div class="card" style="width: 18rem;">
-    <img src="jpeg/Larisa2Yellow.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <p class="card-text">Лариса Владимировна:<br>Большое спасибо коллективу CYKA! После прохождения теста я прозрела!</p>
-    </div>
-</div>
-<div class="card" style="width: 18rem;">
-    <img src="jpeg/FirdausYellow.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <p class="card-text">Фирдаус:<br>Задонатил миллион рублей! Где тест по татарскому языку???</p>
-    </div>
-</div>
-<br><br>
+
 
 <script src="js/app.js" type="module"></script>
 
 </body>
 </html>
 
-<!--TODO: 1. Вопросы не в массивах, в через объекты-->
-<!--TODO: 2. Убрать лишнее, это образовательный ресурс-->
+<!--TODO: 1. Вопросы не в массивах, а через объекты-->
+<!--ВЫПОЛНЕНО TODO: 2. Убрать лишнее, это образовательный ресурс-->
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
@@ -66,4 +46,5 @@
 <!--TODO: 7. Убрать алерты, создать страничку - заглушку-->
 <!--TODO: 8. Написать тест-->
 <!--TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
+<!--TODO: 10. Реализовать возможность отправки отзывов с их запиливанием сразу-->
 
