--- a/src/index.html
+++ b/src/index.html
@@ -5,35 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        .card {
-            float:left;
-            margin: 0 15px 15px 0;
-            text-align:center;
-            padding: 10px;
-        }
-    </style>
     <title>CYKA</title>
 </head>
 <body>
-<div class="container-fluid">
-    <h1 class="text-primary">CYKA</h1>
-    <h3 class="text-primary">Check Your Knowledge Automatically</h3>
-    <h5 class="text-primary">Готовишься к экзаменам или собеседованию?<br> Узнай по какой теме тебе стоит дополнительно подготовиться!<br>
+<div>
+    <h1>CYKA</h1>
+    <h3>Check Your Knowledge Automatically</h3>
+    <h5>Готовишься к экзаменам или собеседованию?<br> Узнай по какой теме тебе стоит дополнительно подготовиться!<br>
     ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания и навыки<br>
     ШАГ 2 – пройди тест<br>
     ШАГ 3 – получай результаты и готовься!</h5>
 
 </div>
-<button id="start" type="button" class="btn btn-primary">Приступить к тесту</button>
-<button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button>
-<button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button>
-<button id="newTest" type="button" class="btn btn-primary">Предложить тест</button><br><br>
+<h3>Выбирай категорию:</h3><br>
+<button id="programming">Программирование</button>
+<button id="physics">Физика</button>
+<button id="chimistry">Химия</button>
+<button id="oil">Нефтяная промышленность</button>
+<button id="sport">Спорт</button>
+<button id="phylosophy">Философия</button>
+<button id="history">История</button>
+<button id="math">Математика</button>
+<button id="geography">География</button>
+<button id="medicine">Медицина</button>
+<button id="journalism">Журналистика</button>
+<button id="literature">Литература</button>
+<button id="low">Юриспруденция</button>
+
+<br><br>
+<button id="donat">Отправить деньги на развитие ресурса</button>
+<button id="newTest">Предложить тест</button><br><br>
 
 
-<script src="js/app.js" type="module"></script>
-
+<script src="js/appTest.js" type="module"></script>
 </body>
 </html>
 
@@ -43,8 +47,9 @@
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
 <!--TODO: 6. Джейсон-->
-<!--TODO: 7. Убрать алерты, создать страничку - заглушку-->
+<!--ВЫПОЛНЕНО TODO: 7. Убрать алерты, создать страничку - заглушку-->
 <!--TODO: 8. Написать тест-->
 <!--TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
 <!--TODO: 10. Реализовать возможность отправки отзывов с их запиливанием сразу-->
+<!--TODO: 11. Дизайн-->
 
