--- a/src/newTest.html
+++ b/src/newTest.html
@@ -5,24 +5,23 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Форма внесения нового теста</title>
 </head>
 <body>
-<h5 class="text-primary">Введите тему теста:</h5>
+<h5>Введите тему теста:</h5>
 <input id="newTheme">
-<h5 class="text-primary">Введите вопрос:</h5>
+<h5>Введите вопрос:</h5>
 <input id="newQuestion">
-<h5 class="text-primary">Введите правильный ответ:</h5>
+<h5>Введите правильный ответ:</h5>
 <input id="newAnswer">
-<h5 class="text-primary">Введите первый неправильный ответ:</h5>
+<h5>Введите первый неправильный ответ:</h5>
 <input id="newWrongAnswer1">
-<h5 class="text-primary">Введите второй неправильный ответ:</h5>
+<h5>Введите второй неправильный ответ:</h5>
 <input id="newWrongAnswer2">
-<h5 class="text-primary">Введите третий неправильный ответ:</h5>
+<h5>Введите третий неправильный ответ:</h5>
 <input id="newWrongAnswer3"><br><br>
-<button id="newTest" type="button" class="btn btn-primary">Отправить на рассмотрение</button>
+<button id="newTest">Отправить на рассмотрение</button>
 <br><br><br>
-<h4 class="text-primary">Спасибо!</h4>
+<h4>Спасибо!</h4>
 </body>
 </html>
