--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CYKA</title>
+    <title>CYK</title>
 </head>
 <body>
 <div>
-    <h1>CYKA</h1>
-    <h3>Check Your Knowledge Automatically</h3>
+    <h1>CYK</h1>
+    <h3>Check Your Knowledge</h3>
     <h5>Готовишься к экзаменам или собеседованию?<br> Узнай по какой теме тебе стоит дополнительно подготовиться!<br>
     ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания и навыки<br>
     ШАГ 2 – пройди тест<br>
@@ -49,7 +49,7 @@
 <!--TODO: 6. Джейсон-->
 <!--ВЫПОЛНЕНО TODO: 7. Убрать алерты, создать страничку - заглушку-->
 <!--TODO: 8. Написать тест-->
-<!--TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
+<!--ВЫПОЛНЕНО TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
 <!--TODO: 10. Реализовать возможность отправки отзывов с их запиливанием сразу-->
 <!--TODO: 11. Дизайн-->
 
