--- a/src/newTest.html
+++ b/src/newTest.html
@@ -19,9 +19,10 @@
 <h5>Введите второй неправильный ответ:</h5>
 <input id="newWrongAnswer2">
 <h5>Введите третий неправильный ответ:</h5>
-<input id="newWrongAnswer3"><br><br>
+<input id="newWrongAnswer3"><br>
 <button id="newTest">Отправить на рассмотрение</button>
 <br><br><br>
 <h4>Спасибо!</h4>
+<script src="js/newTest.js"></script>
 </body>
 </html>
