questionForCheck as OBJECT created

--- a/src/newTest.html
+++ b/src/newTest.html
@@ -8,20 +8,22 @@
     <title>Форма внесения нового теста</title>
 </head>
 <body>
-<h5>Введите тему теста:</h5>
+<p>Введите тему теста:</p>
 <input id="newTheme">
-<h5>Введите вопрос:</h5>
+<p>Введите подтему теста:</p>
+<input id="newSubTheme">
+<p>Введите вопрос:</p>
 <input id="newQuestion">
-<h5>Введите правильный ответ:</h5>
+<p>Введите правильный ответ:</p>
 <input id="newAnswer">
-<h5>Введите первый неправильный ответ:</h5>
+<p>Введите первый неправильный ответ:</p>
 <input id="newWrongAnswer1">
-<h5>Введите второй неправильный ответ:</h5>
+<p>Введите второй неправильный ответ:</p>
 <input id="newWrongAnswer2">
-<h5>Введите третий неправильный ответ:</h5>
+<p>Введите третий неправильный ответ:</p>
 <input id="newWrongAnswer3"><br>
 <button id="newTest">Отправить на рассмотрение</button>
-<br><br><br>
+<br>
 <h4>Спасибо!</h4>
 <script src="js/newTest.js"></script>
 </body>
