--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,6 @@
 <!--ВЫПОЛНЕНО TODO: 7. Убрать алерты, создать страничку - заглушку-->
 <!--TODO: 8. Написать тест-->
 <!--ВЫПОЛНЕНО TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
-<!--TODO: 10. Реализовать возможность отправки отзывов с их запиливанием сразу-->
+<!--TODO: 10. Реализовать возможность подготовки отправки donat.html и newTest.html в JSON файл фейковый (будет под заглушкой)-->
 <!--TODO: 11. Дизайн-->
 
