--- a/src/donat.html
+++ b/src/donat.html
@@ -5,11 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="donat.css">
+    <link rel="stylesheet" href="css/donat.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/background.css">
     <title>Внесение денег</title>
 </head>
 <body>
+<div>
+    <a id="homeButton" href="index.html" title="На шлавную страницу"></a>
+</div>
 <form id="cardForm">
     <div class="text-input">
         <h5 class="text-primary">Введите имя и фамилию:</h5>
@@ -36,10 +41,23 @@
     </div>
 
     <div class="button">
-        <button id="confirmButton" type="button" class="btn btn-primary">Отправить</button>
+        <button id="confirmButton" class="app-button">Отправить</button>
     </div>
 </form>
 
+<div class="modal-overlay closed" id="modal-overlay"></div>
+
+<div class="modal closed" id="modal" aria-hidden="true" aria-labelledby="modalTitle" aria-describedby="modalDescription" role="dialog">
+    <button class="close-button" id="close-button" title="Закрыть модальное окно">Закрыть</button>
+    <div class="modal-guts" role="document">
+        <h1>ДОНАТ</h1>
+        <br>
+        <h1>Спасибо большое, БРАТУХА!</h1>
+
+    </div>
+</div>
+
 <script src="js/donat.js" type="module"></script>
+<script src="js/modal.js" type="module"></script>
 </body>
 </html>
