--- a/src/empty.html
+++ b/src/empty.html
@@ -8,9 +8,14 @@
     <title>Oops!</title>
 </head>
 <body>
-<h1>
-    К сожалению тест по данной теме еще не готов.
-</h1>
-<a href="index.html">Вернуться на начальную страницу</a>
+<div>
+    <a id="homeButton" href="index.html" title="На главную страницу"></a>
+</div>
+
+<div class="test-content">
+    <h1 style="text-align: center">
+        К сожалению тест по данной теме еще не готов.
+    </h1>
+</div>
 </body>
 </html>
