--- a/src/index.html
+++ b/src/index.html
@@ -5,38 +5,48 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>CYK</title>
 </head>
 <body>
-<div>
-    <h1>CYK</h1>
-    <h3>Check Your Knowledge</h3>
-    <h5>Готовишься к экзаменам или собеседованию?<br> Узнай по какой теме тебе стоит дополнительно подготовиться!<br>
-    ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания и навыки<br>
-    ШАГ 2 – пройди тест<br>
-    ШАГ 3 – получай результаты и готовься!</h5>
-
+<input type="checkbox" id="nav-toggle" hidden>
+<div class="nav">
+    <label for="nav-toggle" class="nav-toggle" onclick></label>
+    <h2 class="logo">
+        CYK
+    </h2>
+    <ul>
+        <li><a href="empty.html">Программирование</a>
+        <li><a href="empty.html">Физика</a>
+        <li><a href="empty.html">Химия</a>
+        <li><a href="oilTest.html">Нефтяная промышленность</a>
+        <li><a href="empty.html">Философия</a>
+        <li><a href="empty.html">История</a>
+        <li><a href="empty.html">Математика</a>
+        <li><a href="empty.html">География</a>
+        <li><a href="empty.html">Медицина</a>
+        <li><a href="empty.html">Журналистика</a>
+        <li><a href="empty.html">Литература</a>
+        <li><a href="empty.html">Юриспруденция</a>
+    </ul>
 </div>
-<h3>Выбирай категорию:</h3><br>
-<button id="programming">Программирование</button>
-<button id="physics">Физика</button>
-<button id="chimistry">Химия</button>
-<button id="oil">Нефтяная промышленность</button>
-<button id="sport">Спорт</button>
-<button id="phylosophy">Философия</button>
-<button id="history">История</button>
-<button id="math">Математика</button>
-<button id="geography">География</button>
-<button id="medicine">Медицина</button>
-<button id="journalism">Журналистика</button>
-<button id="literature">Литература</button>
-<button id="low">Юриспруденция</button>
-
-<br><br>
-<button id="donat">Отправить деньги на развитие ресурса</button>
-<button id="newTest">Предложить тест</button><br><br>
-
-
+<div class="mask-content"></div>
+<div class="panel">
+    <span id="logotype">CYK</span>
+    <input type="button" class="app-button" id="newTest" value="Предложить тест">
+    <input type="button" class="app-button" title="Помощь сайту" id="donateButton" value="$">
+</div>
+<div class="content">
+    <h1 class="content-title">Check Your Knowledge</h1>
+    <div class="content-inside">
+        <p>Готовишься к экзаменам или собеседованию?</p>
+        <p>Узнай по какой теме тебе стоит дополнительно подготовиться!</p>
+        <p>ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания</p>
+        <p>ШАГ 2 – пройди тест</p>
+        <p>ШАГ 3 – получай результаты и готовься!</p>
+    </div>
+</div>
 <script src="js/appTest.js" type="module"></script>
 </body>
 </html>
