--- a/src/newTest.html
+++ b/src/newTest.html
@@ -5,9 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/donat.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/background.css">
     <title>Форма внесения нового теста</title>
 </head>
 <body>
+<div>
+    <a id="homeButton" href="index.html" title="На главную страницу"></a>
+</div>
+<form>
 <p>Введите тему теста:</p>
 <input id="newTheme">
 <p>Введите подтему теста:</p>
@@ -22,9 +30,19 @@
 <input id="newWrongAnswer2">
 <p>Введите третий неправильный ответ:</p>
 <input id="newWrongAnswer3"><br>
-<button id="newTest">Отправить на рассмотрение</button>
-<br>
-<h4>Спасибо!</h4>
+<div class="button">
+    <button id="confirmButton" type="button" class="app-button">Отправить</button>
+</div>
+</form>
+<div class="modal-overlay closed" id="modal-overlay"></div>
+<div class="modal closed" id="modal" aria-hidden="true" aria-labelledby="modalTitle" aria-describedby="modalDescription" role="dialog">
+    <button class="close-button" id="close-button" title="Закрыть модальное окно">Закрыть</button>
+    <div class="modal-guts" role="document">
+        <br>
+        <h1>Спасибо! Мы рассмотрим Вашу заявку.</h1>
+    </div>
+</div>
+<script src="js/modal.js" type="module"></script>
 <script src="js/newTest.js"></script>
 </body>
 </html>
