--- a/src/oilTest.html
+++ b/src/oilTest.html
@@ -5,27 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/background.css">
+    <link rel="stylesheet" href="css/content.css">
     <title>ТЕСТ по нефтяной промышленности</title>
 </head>
 <body>
+<div>
+    <a id="homeButton" href="index.html"></a>
+</div>
 
-<p id="time">Затрачено времени: 0 сек</p>
-<p id="result"></p>
-<p id="question"></p>
+<div class="test">
+    <div class="test-content">
+        <p id="time">Затрачено времени: 0 сек</p>
+        <p id="result"></p>
+        <p id="question"></p>
+    </div>
+    <div class="buttons">
+        <button id="answer1" class="app-button"></button>
+        <button id="answer2" class="app-button"></button>
+        <button id="answer3" class="app-button"></button>
+        <button id="answer4" class="app-button"></button>
+    </div>
+    <br>
 
-<button id="answer1"></button>
-<button id="answer2"></button>
-<button id="answer3"></button>
-<button id="answer4"></button>
-<br>
 
-<button id="start">Приступить к тесту</button>
-<br><br><br><br>
+    <button id="start" class="app-button">Приступить к тесту</button>
+    <br><br><br><br>
 
-<script>
-    let curent_url = document.URL;
-    document.write("<a id='end' style='display: none;' href='" + curent_url + "'>Начать сначала</a>");
-</script><br>
+    <script>
+        let curent_url = document.URL;
+        document.write("<a id='end' style='display: none;' href='" + curent_url + "'>Начать сначала</a>");
+    </script>
+</div>
 <script src="js/appOilTest.js" type="module"></script>
 
 </body>
