--- a/src/empty.html
+++ b/src/empty.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/empty.css">
     <title>Oops!</title>
 </head>
 <body>
@@ -18,5 +19,6 @@
         К сожалению тест по данной теме еще не готов.
     </h1>
 </div>
+
 </body>
 </html>
