--- a/src/donat.html
+++ b/src/donat.html
@@ -52,7 +52,7 @@
     <div class="modal-guts" role="document">
         <h1>ДОНАТ</h1>
         <br>
-        <h1>Спасибо большое, БРАТУХА!</h1>
+        <h1>Спасибо большое!</h1>
 
     </div>
 </div>
